--- a/angadp/angadp/index.html
+++ b/angadp/angadp/index.html
@@ -49,9 +49,26 @@
         </div>
       </div>
     </section>
+    <section class="resume">
+      <h2 class="animate-slide-up">Resume</h2>
+      <a href="resume.pdf" download class="resume-download animate-fade-in">Download My Resume (PDF)</a>
+    </section>
     <section class="contact">
       <h2 class="animate-slide-up">Contact</h2>
-      <p class="animate-fade-in">[Social links coming soon]</p>
+      <div class="social-links animate-fade-in">
+        <a href="https://www.linkedin.com/in/angad-yadav-969ab1304?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" rel="noopener" class="social-link linkedin">LinkedIn</a>
+        <a href="https://www.instagram.com/yadav_7angad?igsh=Y2U4ZHIzaHdzcnE1" target="_blank" rel="noopener" class="social-link instagram">Instagram</a>
+      </div>
+      <div class="contact-info animate-fade-in">
+        <div class="contact-card">
+          <span class="contact-label"><svg class="contact-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" viewBox="0 0 24 24"><path fill="#00cec9" d="M2 6.5A2.5 2.5 0 0 1 4.5 4h15A2.5 2.5 0 0 1 22 6.5v11A2.5 2.5 0 0 1 19.5 20h-15A2.5 2.5 0 0 1 2 17.5v-11Zm2.5-.5a.5.5 0 0 0-.5.5v.217l8 5.333 8-5.333V6.5a.5.5 0 0 0-.5-.5h-15Zm15 13a.5.5 0 0 0 .5-.5V9.383l-7.5 5-7.5-5V17.5a.5.5 0 0 0 .5.5h15Z"/></svg> Email:</span>
+          <a href="mailto:ysujal593@gmail.com" class="contact-item">ysujal593@gmail.com</a>
+        </div>
+        <div class="contact-card">
+          <span class="contact-label"><svg class="contact-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" viewBox="0 0 24 24"><path fill="#00cec9" d="M6.62 10.79a15.053 15.053 0 0 0 6.59 6.59l2.2-2.2a1 1 0 0 1 1.01-.24c1.12.37 2.33.57 3.58.57a1 1 0 0 1 1 1V20a1 1 0 0 1-1 1C10.07 21 3 13.93 3 5a1 1 0 0 1 1-1h3.5a1 1 0 0 1 1 1c0 1.25.2 2.46.57 3.58a1 1 0 0 1-.24 1.01l-2.2 2.2Z"/></svg> Phone:</span>
+          <a href="tel:9140106044" class="contact-item">9140106044</a>
+        </div>
+      </div>
     </section>
   </main>
   <footer class="animate-fade-in">
