--- a/angadp/angadp/index.html
+++ b/angadp/angadp/index.html
@@ -51,7 +51,7 @@
     </section>
     <section class="resume">
       <h2 class="animate-slide-up">Resume</h2>
-      <a href="resume.pdf" download class="resume-download animate-fade-in">Download My Resume (PDF)</a>
+      <a href="angadresume.pdf" download class="resume-download animate-fade-in">Download My Resume (PDF)</a>
     </section>
     <section class="contact">
       <h2 class="animate-slide-up">Contact</h2>
